# nanofab-cli

./: .gitignore  Cargo.toml  flake.nix
src/: html.rs  main.rs  nanofab.rs  schedule.rs  term_ui.rs
