[package]
name = "nanofab-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
crossterm = "0.25.0"
dirs = "4.0.0"
futures-util = "0.3.25"
itertools = "0.10.5"
nom = "7.1.1"
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["cookies"] }
ron = "0.8.0"
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tokio = { version = "1.21.2", features = ["full", "time"] }
urlencoding = "2.1.2"
