[package]
name = "nanofab-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.29"
dirs = "6.0"
itertools = "0.14"
nom = "8.0"
reqwest = { version = "0.12", features = ["cookies", "native-tls"], default-features = false }
ron = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.45", features = ["macros", "time", "rt-multi-thread"] }
urlencoding = "2.1"
